@@ -26,11 +26,13 @@
   <artifactId>netty-testsuite-osgi</artifactId>
   <packaging>jar</packaging>
 
+
+
   <name>Netty/Testsuite/OSGI</name>
 
   <properties>
     <exam.version>4.9.1</exam.version>
-    <skipOsgiTestsuite>false</skipOsgiTestsuite>
+    <argLine.java9.extras>--add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED</argLine.java9.extras>
   </properties>
 
   <profiles>
